tests/typeof/typeof.exp
Error: maybe.js:9
  9: ('foo': typeof x); // error: string ~> number
      ^^^^^ Cannot cast `'foo'` to `typeof x` because string [1] is incompatible with number [2].
  References:
    9: ('foo': typeof x); // error: string ~> number
        ^^^^^ [1]: string
    8: var x = f(42);
                 ^^ [2]: number

Error: optional.js:9
  9: (null: typeof x); // error: null ~> $Optional<number> (i.e., void|number)
      ^^^^ Cannot cast `null` to `typeof x` because null [1] is incompatible with number [2].
  References:
    9: (null: typeof x); // error: null ~> $Optional<number> (i.e., void|number)
        ^^^^ [1]: null
    8: var x = f(42).p;
                 ^^ [2]: number

Error: typeof.js:43
 43: var b: MyClass1 = MyClass1;
                       ^^^^^^^^ statics of `MyClass1`. This type is incompatible with
 43: var b: MyClass1 = MyClass1;
            ^^^^^^^^ MyClass1

Error: typeof.js:53
 53: var c: typeof MyClass2 = new MyClass2();
                              ^^^^^^^^^^^^^^ MyClass2. This type is incompatible with
 53: var c: typeof MyClass2 = new MyClass2();
            ^^^^^^^^^^^^^^^ `typeof MyClass2`

Error: typeof.js:61
 61: var e: typeof numValue = 'asdf'; // Error: string ~> number
                              ^^^^^^ string. This type is incompatible with
 61: var e: typeof numValue = 'asdf'; // Error: string ~> number
            ^^^^^^^^^^^^^^^ number

Error: typeof.js:73
 73: var f: typeof numberAlias = 42; // Error: 'typeof <<type-alias>>' makes no sense...
                   ^^^^^^^^^^^ numberAlias. type referenced from value position
 67: type numberAlias = number;
          ^^^^^^^^^^^ type numberAlias

Error: typeof.js:82
 82:  var keys: $Keys<Map> = "A";  // Error: ineligible value used in type anno
                      ^^^ object literal. Ineligible value used in/as type annotation (did you forget 'typeof'?)
 82:  var keys: $Keys<Map> = "A";  // Error: ineligible value used in type anno
                      ^^^ Map

Error: union.js:9
  9: (null: typeof x); // error: null ~> number|string
      ^^^^ null. This type is incompatible with the expected param type of
  9: (null: typeof x); // error: null ~> number|string
            ^^^^^^^^ string


Found 8 errors
